# skse_plugin_rust_bridge_template

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  Cargo.toml  cspell.jsonc  main.ps1  readme.md  xmake.d.lua  xmake.lua
.github/actions/setup-deps/: action.yaml
.github/workflows/: build.yaml  release.yaml
cxx/: xmake.lua
cxx/include/: bridge.hh  core.hh  pch.hh  persistence.hh  ui.hh
cxx/include/cmd_cheat/: cmd_model.hh  cmd_view.hh
cxx/include/item_cheat/: item_model.hh  item_view.hh
cxx/src/: bridge.cc  core.cc  main.cc  persistence.cc  ui.cc
cxx/src/cmd_cheat/: cmd_model.cc  cmd_view.cc
cxx/src/item_cheat/: item_model.cc  item_view.cc
rust/bridge/: Cargo.toml  build.rs  xmake.lua
rust/bridge/src/: bridge.rs  lib.rs  macros.rs
