[package]
name = "bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1"

[build-dependencies]
cxx-build = "1"

[lints]
workspace = true
